[gd_scene load_steps=17 format=3 uid="uid://c3kgwsgsauiw4"]

[ext_resource type="PackedScene" path="res://scene/Main_Menu_BGM.tscn" id="1_kdhx4"]
[ext_resource type="Script" path="res://scene/Transition.gd" id="1_v6gn5"]
[ext_resource type="Shader" path="res://Scripts/Scroll.gdshader" id="2_cujic"]
[ext_resource type="Shader" path="res://Scripts/Scoll2.gdshader" id="2_qld2n"]
[ext_resource type="Texture2D" uid="uid://bq1rageurwbky" path="res://art/Urban-landscape-files/urban-landscape-background-Preview.png" id="3_ttcqo"]
[ext_resource type="Texture2D" uid="uid://c5d14ft713kas" path="res://art/Urban-landscape-files/layers/buildings-layer.png" id="4_urnb8"]
[ext_resource type="Texture2D" uid="uid://dudnorxxrnxcq" path="res://art/vecteezy_realistic-line-shadow-effect_21104212.png" id="5_l4vm1"]
[ext_resource type="Texture2D" uid="uid://dgbp58dt385kh" path="res://art/408788781-eafac3ee-18b7-4864-9437-74d7bb96f0dd.png" id="6_bjh1v"]
[ext_resource type="Texture2D" uid="uid://bqhbh55tshhi5" path="res://art/Adobe_Express_-_file_2.png" id="6_c6c77"]
[ext_resource type="Theme" uid="uid://bbghb1adgn6ar" path="res://themes/Main_Menu.tres" id="7_2d1rd"]
[ext_resource type="Script" path="res://scene/Button_Sounds.gd" id="10_v2xko"]
[ext_resource type="AudioStream" uid="uid://bcicd2g4wh5j6" path="res://sound/Military Voice Pack 2/Variation 1/Okay, Lets go 1.wav" id="11_0bhba"]
[ext_resource type="AudioStream" uid="uid://kafacr6ojbm7" path="res://sound/Military Voice Pack 2/Variation 1/Follow Me 1.wav" id="12_33nw1"]
[ext_resource type="AudioStream" uid="uid://mloji0fg40iu" path="res://sound/Military Voice Pack 2/Variation 1/Legends Here 2.wav" id="13_wenfc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ud28p"]
shader = ExtResource("2_qld2n")
shader_parameter/Speed = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rlhce"]
shader = ExtResource("2_cujic")
shader_parameter/Speed = 0.1

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v6gn5")

[node name="AudioStreamPlayer" parent="." instance=ExtResource("1_kdhx4")]

[node name="Node2D" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="Node2D"]
self_modulate = Color(0.347817, 0.347817, 0.347817, 1)
texture_repeat = 2
material = SubResource("ShaderMaterial_ud28p")
position = Vector2(611, 268)
scale = Vector2(3.72917, 3.4375)
texture = ExtResource("3_ttcqo")

[node name="middleGround" type="Sprite2D" parent="Node2D"]
self_modulate = Color(0.355314, 0.355314, 0.355314, 1)
texture_repeat = 2
material = SubResource("ShaderMaterial_rlhce")
position = Vector2(648.5, 286.75)
scale = Vector2(7.75521, 5.44574)
texture = ExtResource("4_urnb8")

[node name="ColorRect" type="ColorRect" parent="Node2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0398189, 0.172735, 0.286787, 1)

[node name="Road" type="TextureRect" parent="Node2D"]
self_modulate = Color(0.400698, 0.400698, 0.400698, 1)
offset_left = -2941.0
offset_top = 520.0
offset_right = 4113.0
offset_bottom = 811.0
texture = ExtResource("6_c6c77")
expand_mode = 1

[node name="Car_Shadow" type="TextureRect" parent="Node2D"]
self_modulate = Color(0.0728426, 0.0728426, 0.0728426, 1)
offset_top = 454.0
offset_right = 402.0
offset_bottom = 685.0
texture = ExtResource("5_l4vm1")
expand_mode = 1

[node name="Car" type="TextureRect" parent="Node2D"]
offset_left = 23.0
offset_top = 399.0
offset_right = 387.0
offset_bottom = 652.0
texture = ExtResource("6_bjh1v")
expand_mode = 1
flip_h = true

[node name="Title_Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.23
anchor_right = 0.5
anchor_bottom = 0.231
offset_left = -180.0
offset_top = -113.04
offset_right = 181.0
offset_bottom = 197.312
grow_horizontal = 2

[node name="RCP" type="Label" parent="Title_Container"]
layout_mode = 2
theme = ExtResource("7_2d1rd")
theme_override_font_sizes/font_size = 175
text = "BCP"
horizontal_alignment = 1

[node name="Title" type="Label" parent="Title_Container"]
layout_mode = 2
theme = ExtResource("7_2d1rd")
theme_override_colors/font_color = Color(0.618211, 0.618721, 0.606427, 1)
theme_override_font_sizes/font_size = 45
text = "Breachers 
Chokepoint"
horizontal_alignment = 1

[node name="Button_Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.583
anchor_right = 0.5
anchor_bottom = 0.583
offset_left = -130.0
offset_top = -71.784
offset_right = 133.0
offset_bottom = 132.216
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_v2xko")

[node name="Start" type="Button" parent="Button_Container"]
layout_mode = 2
theme = ExtResource("7_2d1rd")
theme_override_font_sizes/font_size = 30
text = "Level Select"

[node name="Start_Pressed" type="AudioStreamPlayer" parent="Button_Container"]
stream = ExtResource("11_0bhba")

[node name="Options" type="Button" parent="Button_Container"]
layout_mode = 2
theme = ExtResource("7_2d1rd")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="Options_Pressed" type="AudioStreamPlayer" parent="Button_Container"]
stream = ExtResource("12_33nw1")

[node name="Credits" type="Button" parent="Button_Container"]
layout_mode = 2
theme = ExtResource("7_2d1rd")
theme_override_font_sizes/font_size = 30
text = "Credits"

[node name="Credits_Pressed" type="AudioStreamPlayer" parent="Button_Container"]
stream = ExtResource("13_wenfc")

[node name="Quit" type="Button" parent="Button_Container"]
layout_mode = 2
theme = ExtResource("7_2d1rd")
theme_override_font_sizes/font_size = 30
text = "Quit
"

[connection signal="pressed" from="Button_Container/Start" to="Button_Container" method="_on_start_pressed"]
[connection signal="pressed" from="Button_Container/Options" to="Button_Container" method="_on_options_pressed"]
[connection signal="pressed" from="Button_Container/Credits" to="Button_Container" method="_on_credits_pressed"]
[connection signal="pressed" from="Button_Container/Quit" to="Button_Container" method="_on_quit_pressed"]
